# px4_sitl_duck

./: CMakeLists.txt  README.md  package.xml  tf_broadcaster.py  tfpublish.cpp
airframe/: 10029_ball  8001_caros_h_v0
config/: muin_control.yaml
hfr_world/: hfr_world.world
hfr_world/Box/: model.sdf
hfr_world/e2e/: E2E.STL  e2e.sdf  model.config
hfr_world/hfr_mwc/: model.config  model.sdf
hfr_world/operation_desk/: model.config  operation_desk.STL  operation_desk.sdf
include/: conf.h  utm.h
include/UTM_lib/: UTM.cpp  UTM.h
launch/: mod_disaster_sitl.launch  mod_test.launch  px4_sitl.launch  px4_sitl_ball.launch  px4_sitl_caros_h_v0.launch  px4_sitl_omni.launch  wp_reader.launch
models/3DR_gps_mag/: 3DR_gps_mag-gen.sdf
models/Drone/: manifest.xml
models/assem_test/: model.config  modular_test.sdf
models/ball_drone/: model.config  model.sdf
models/bigben/: bigben.sdf  bigben_100.dae  model.config
models/box_actu/: box_actu.sdf  model.config
models/caros_h_v0/: model.config  model.sdf
models/concrete_plane/: model.config  model.sdf
models/d435i/: model.config  model.sdf
msg/: WaypointInform.msg  WaypointList.msg  battery_info.msg  estimated_gps.msg  flight_data.msg  is_connected.msg  json.msg  jsonList.msg  log_data.msg  mission_struct.msg  rpyThrust.msg  sensor_data.msg  uav_status.msg  video_data.msg
scripts/: L1_adaptive_pqrt  dualshock_for_omnicopter.py  dualshock_mavros.py  merge_modular.py
srv/: Waypoint.srv  auto_mission_start.srv  automatic_mission_start.srv  drone2monitor.srv  drone2monitor_list.srv  gimbal_control.srv  handy_control.srv  image_capture.srv  json_drone2monitor.srv  json_drone2monitor_list.srv  linenumin_waypointout.srv  monitor_key.srv  move_control.srv  request_gps_mission.srv  rotate_control.srv  send_mission_info.srv  take_off.srv  test_srv.srv  wp_idx.srv  zoom_control.srv
waypoint_data/: deungsun_simul.txt  drone_contest.txt  flight_1.txt  wpList1.txt  wp_20191125.txt  wp_scenario.txt
worlds/: EE.world  EE807 (copy).world  add_kdarpa.world  caros_h_v0.world  mapping_2bridge_iris.world  mapping_ball.world  mapping_iris.world  mapping_m100.world  mapping_omni.world  mod_disaster_sitl.world  modified_warehouse.world  modified_warehouse1.world  modular_test.world  muin_iris.world  muin_temp.world  ncpp_LiDAR_bridge.world  ncpp_LiDAR_random.world  ncpp_LiDAR_simple.world  ncpp_RGBD_URL.world  ncpp_RGBD_bridge.world  ncpp_RGBD_collapsed_industrial.world  ncpp_RGBD_powerplant.world  ncpp_RGBD_random.world  ncpp_RGBD_simple.world  temp_modular.world  trajectory_example.world  urban_after_earthquake.world  volcano.world  walk.world
(+118 files in other folders)
